# deluge-grpc

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  makefile  mkdocs.yml  pyproject.toml  setup.cfg
.github/: ISSUE_TEMPLATE.md
deluge_gprc/: __init__.py
deluge_grpc/: async_server.py  deluge_dfs.proto  deluge_dfs_async_server.py  deluge_dfs_pb2.py  deluge_dfs_pb2_grpc.py  demo_client.py
docs/: api.md  deluge_dfs_proto.md  installation.md  usage.md
node_client/: demo_client.js  package-lock.json
tests/: __init__.py  test_deluge_gprc.py  test_deluge_grpc.py
